HttpResponse 변화에 따른 HttpResponse를 생성하는 부분 코드 수정